--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1> Hello GitHub 2 </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Git Hub</title>
+</head>
+<body>
+  <h1> Hello GitHub</h1>
+  <img src="images/octoCat.png" alt="">
+
+</body>
+</html>
