alt text on the image added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1> Hello GitHub</h1>
-  <img src="images/octoCat.png" alt="">
+  <img src="images/octoCat.png" alt="Simple octo Cat">
 
 </body>
 </html>
