--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Git Hub</title>
+
+  <style>
+    img {
+      width: 300px;
+    }
+  </style>
+
 </head>
 <body>
   <h1> Hello GitHub</h1>
