added three images

--- a/index.html
+++ b/index.html
@@ -7,13 +7,23 @@
   <style>
     img {
       width: 300px;
+      border: 1px solid black;
+      margin: 5px;
     }
+    h1{
+      text-align: center;
+      font-size: 40px;
+    }
+
   </style>
 
 </head>
 <body>
   <h1> Hello GitHub</h1>
   <img src="images/octoCat.png" alt="Simple octo Cat">
+  <img src="images/gitHub-logo.png" alt="Logo GitHub">
+  <img src="images/magicCat.png" alt="magic Cat">
+  <img src="images/studentCat.jpg" alt="student Cat">
 
 </body>
 </html>
