--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Git Hub</title>
+  <title>OctoCats</title>
 
   <style>
     img {
@@ -25,7 +25,7 @@
 
 </head>
 <body>
-  <h1> Hello GitHub</h1>
+  <h1> Hello GitHub </h1>
     <div>
       <button>Toggle BackGround</button>
     </div>
