8 octoCats and centered images

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <style>
     img {
       width: 300px;
+      height: 300px;
       border: 1px solid black;
       margin: 5px;
       border-radius: 10px;
@@ -26,14 +27,21 @@
 </head>
 <body>
   <h1> Hello GitHub </h1>
-    <div>
-      <button>Toggle BackGround</button>
-    </div>
-  <img src="images/octoCat.png" alt="Simple octo Cat">
-  <img src="images/gitHub-logo.png" alt="Logo GitHub">
-  <img src="images/magicCat.png" alt="magic Cat">
-  <img src="images/studentCat.jpg" alt="student Cat">
+  <div id='botonera'>
+    <button>Toggle BackGround</button>
+  </div>
 
+  <div id='container'>
+    <img src="images/octoCat.png" alt="Simple octo Cat">
+    <img src="images/gitHub-logo.png" alt="Logo GitHub">
+    <img src="images/magicCat.png" alt="magic Cat">
+    <img src="images/studentCat.jpg" alt="student Cat">
+    <img src="images/roboCat.png" alt="robot Cat">
+    <img src="images/technoCat.jpg" alt="techno Cat">
+    <img src="images/jediCat.jpg" alt="jedi Cat">
+    <img src="images/skullCat.jpg" alt="skull Cat">
+  </div>
+  
   <script src="file.js"></script>
 
 
